deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-app 
  template:
    metadata:
      labels:
        app: devops-app
    spec: 
      containers:
        - name: devops-container
          image: testethical/devops-app:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
