secret-pod.yaml
apiVersion: v1 
kind: Pod
metadata: 
  name: secret-test-pod
spec:
  containers:
  - name: nginx
    image: nginx:alpine
