my-website.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: web-test
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: web-test
  template:
    metadata:
      labels:
        app: web-test
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: web-test-service
spec:
  selector:
    app: web-test
  ports:
  - port: 80
    targetPort: 80
